Bug 319170 - Actions are executed twice, and/or on wrong wallet
Summary: Actions are executed twice, and/or on wrong wallet
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-01 13:21 UTC by Christoph Feck
Modified: 2013-05-01 13:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2013-05-01 13:21:58 UTC
The UI rewrite in master branch has the following regression.

Steps to reproduce:
- select "Import XML..." menu item
- click Cancel on file dialog

Actual results:
- the file dialog appears again for a second time

Expected results:
- it should not appear again

This is caused by KWalletEditor::showEvent() calling connectActions(), then later KWalletEditor::setWallet() calling connectActions() again (confirmed by removing the code in showEvent).

The other issue is that disconnectActions() is only called in hideEvent(), but not in setWallet() when connecting to a different wallet.

Steps to reproduce:
- open two wallets
- switch between them
- Select "New Folder" in context menu once

Actual results:
- the "Enter folder name" dialog appears multiple times
- folders are created in both wallets
Comment 1 Valentin Rusu 2013-05-01 13:26:26 UTC
I also noticed this and planned to correct it asap.
Comment 2 Valentin Rusu 2013-05-01 13:47:06 UTC
Git commit 3c982e8aae7260ae86a15185809de23ff276aa64 by Valentin Rusu.
Committed on 01/05/2013 at 15:46.
Pushed by vrusu into branch 'master'.

Fix misbehavior due to multiple action connections

M  +3    -2    src/manager/kwalleteditor.cpp

http://commits.kde.org/kwallet/3c982e8aae7260ae86a15185809de23ff276aa64