Fix misbehavior due to multiple action connections

BUG: 319170